--- a/style.css
+++ b/style.css
@@ -80,18 +80,8 @@ main .inhalt
 
 }
 
-main aside 
-{
-    width: 27%;
-    border: 1px solid #eee;
-    margin-top: 70px;
-    box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.34);
-    margin-left: 3%;
-    padding: 15px 35px;
-}
-aside>h3{
-    text-align: center;
-}
+
+
 
 .inhalt>h1
 {
@@ -190,7 +180,54 @@ aside>h3{
 margin-bottom: 10px;
 }
 
-aside>button
+
+
+#gesamtKosten
+{
+    margin: 15px 0;
+}
+#meldung
+{margin-top: 15px;
+    padding: 10px;
+    color: white;
+}
+.zentiert
+{
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.btn
+{
+    border: none;
+    outline: none;
+    margin-left: 25px;
+    background-color: var(--priymary);
+    padding:10px 20px;
+    border-radius: 4px;
+    color: white ;
+}
+#warenkorbNEU
+{
+    width: 280px;
+    height: 400px;
+    background-color: white;
+    border: 1px solid #eee;
+    border-radius: 4px;
+    box-shadow: 0px 0px 25px -6px rgba(0,0,0,0.34);
+
+    position: absolute;
+    top: 50px;
+    left: 0;
+    display: none;
+
+    padding: 0 15px;
+}
+#warenkorbNEU>h3{
+    text-align: center;
+}
+#warenkorbNEU>button
 {
     padding: 9px 16px;
     border-radius: 4px;
@@ -201,17 +238,7 @@ aside>button
     cursor: pointer;
     width: 100%;
 }
-aside>button:hover
+#warenkorbNEU>button:hover
 {
 background-color: var(--primary-dark);
-}
-
-#gesamtKosten
-{
-    margin: 15px 0;
-}
-#meldung
-{margin-top: 15px;
-    padding: 10px;
-    color: white;
 }
